*Rails 3.1.0 (unreleased)*

* Changed scaffold and app generator to create Ruby 1.9 style hash when running on Ruby 1.9 [Prem Sichanugrist]

  So instead of creating something like:

    redirect_to users_path, :notice => "User has been created"

  it will now be like this:

    redirect_to users_path, notice: "User has been created"

* Changed scaffold_controller generator to create format block for JSON instead of XML [Prem Sichanugrist]

* Add using Turn with natural language test case names for test_help.rb when running with minitest (Ruby 1.9.2+) [DHH]

* Direct logging of Active Record to STDOUT so it's shown inline with the results in the console [DHH]

* Added `config.force_ssl` configuration which loads Rack::SSL middleware and force all requests to be under HTTPS protocol [DHH, Prem Sichanugrist, and Josh Peek]

* Added `rails plugin new` command which generates rails plugin with gemspec, tests and dummy application for testing [Piotr Sarnacki]

* Added -j parameter with jquery/prototype as options. Now you can create your apps with jQuery using `rails new myapp -j jquery`. The default is still Prototype. [siong1987]

* Added Rack::Etag and Rack::ConditionalGet to the default middleware stack [José Valim]

* Added Rack::Cache to the default middleware stack [Yehuda Katz and Carl Lerche]

* Engine is now rack application [Piotr Sarnacki]

* Added middleware stack to Engine [Piotr Sarnacki]

* Engine can now load plugins [Piotr Sarnacki]

* Engine can load its own environment file [Piotr Sarnacki]

* Added helpers to call engines' route helpers from application and vice versa [Piotr Sarnacki]

* Task for copying plugins' and engines' migrations to application's db/migrate directory [Piotr Sarnacki]

* Changed ActionDispatch::Static to allow handling multiple directories [Piotr Sarnacki]

* Added isolate_namespace() method to Engine, which sets Engine as isolated [Piotr Sarnacki]
